# gestao_pec

./: .env.example  .gitignore  Procfile  pyproject.toml  start.sh
src/apps/accounts/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/accounts/templates/accounts/: signin.html  widgets_showcase.html
src/apps/schedule/: admin.py  forms.py  models.py  urls.py  views.py
src/apps/schedule/migrations/: 0006_oficina_semestre.py
src/apps/schedule/templates/schedule/: agenda.html  presenca.html
src/apps/schedule/templates/schedule/gestao/: aluno_bulk.html  aluno_detail.html  aluno_list.html  base_gestao.html  confirm_delete.html  dashboard.html  evento_criar.html  evento_criar_form.html  evento_detail.html  evento_list.html  form.html  oficina_bulk.html  oficina_list.html  semestre_list.html  turma_list.html
src/apps/schedule/templates/schedule/partials/: evento_detalhes.html
src/apps/schedule/templates/schedule/relatorios/: geral.html  presenca_aluno.html  presenca_evento.html  presenca_turma.html
src/apps/schedule/templatetags/: utils.py
src/core/: env.py  mixins.py  settings.py  urls.py
src/templates/: base.html
src/templates/components/: field.html  modal.html
